--- a/index.html
+++ b/index.html
@@ -6,8 +6,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/miestilo.css">
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <nav class="col-1">
+                <a class="navbar-brand" href="#">
+                  <img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFkgwcqA2zRiw/company-logo_200_200/0/1591897930897?e=2159024400&v=beta&t=beRWMFZ4VCVTvy2DQI53opCL3OiM22faoIdPVxgdULs" width="50" height="50" alt="">
+                </a>
+              </nav>
+            <div class="col">
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#">Registrarse</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Iniciar Cesion</a>
+                      <li class="nav-item">
+                        <a class="nav-link" href="carrito.html">Carrito</a>
+                      </li>
+                    </li>
+                  </ul>
+            </div>
+        </div>
+        <section>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">inicio <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Concepto
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">abstracto</a>
+                        <a class="dropdown-item" href="#">figurativo</a>
+                        <a class="dropdown-item" href="#">moderno contemporáneo</a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Nombre Artista" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                  </form>
+                </div>
+              </nav>
+        </section>
+        <section>
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <a href="index1.html" target="_blank"><img src="https://picsum.photos/seed/1/200/100" class="d-block w-100" alt="..."></a>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <a href="index2.html" target="_blank"><img src="https://picsum.photos/seed/2/200/100" class="d-block w-100" alt="..."></a>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <a href="index3.html" target="_blank"><img src="https://picsum.photos/seed/3/200/100" class="d-block w-100" alt="..."></a>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+        </section>
+
+    </div>
     
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/popper.js"></script>
