--- a/index1.html
+++ b/index1.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>imgen1</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/miestilo.css">
 </head>
 <body>
-    <h1>IMAGEN 1</h1>
+<div class="row">
+    <div class="col">
+        
+    </div>
+</div>
+
 </body>
 </html>
