--- a/index1.html
+++ b/index1.html
@@ -4,16 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>imgen1</title>
+    <title>piedra hoja</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/miestilo.css">
+    <link rel="stylesheet" href="css/miestilo2.css">
+
 </head>
 <body>
-<div class="row">
-    <div class="col">
+    <h4>
+        <a href="index.html" class="btn btn-primary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">inicio</a>
+        </h4>
+<div >
+    <center> <h1>Piedra Hoja</h1></center>
+</div>
+
+<nav class="col-sx-6 col-sm-4">
+    <div class="">
+        <img src="img/3.png" class="img-thumbnail" alt="...">
         
     </div>
-</div>
+</nav>
+<nav class="col-sx-4 col-sm-8">
+
+    <ul>
+        <li><a href="#" class="li">historia</a></li>
+        <p id="h4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non nobis nulla earum voluptate, reprehenderit a impedit, minima incidunt fugit facere sapiente, tempore saepe? Quos quas nisi similique. Obcaecati, magnam impedit.</p>
+        <li><a href="#" class="li">descripcion</a></li>
+        <p id="h4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non nobis nulla earum voluptate, reprehenderit a impedit, minima incidunt fugit facere sapiente, tempore saepe? Quos quas nisi similique. Obcaecati, magnam impedit.</p>
+        <li<a href="#" class="li">tecnica usada</a></li>
+        <p id="h4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non nobis nulla earum voluptate, reprehenderit a impedit, minima incidunt fugit facere sapiente, tempore saepe? Quos quas nisi similique. Obcaecati, magnam impedit.</p>
+
+        <li><a href="#" class="li">artista</a></li>
+        <p id="h4">Jacob Ponce</p>
+        <li><a href="#" class="li">precio</a></li>
+        <p id="h4">$150.000</p>
+        <li><a href="#" class="li">Nombre obra</a></li>
+        <p id="h4">Piedra hoja</p>
+    </ul>
+
+</nav>
 
 </body>
 </html>
