--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>grupo cero</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/miestilo.css">
 </head>
@@ -12,13 +12,13 @@
   <!--logo y mini menu-->
     <div class="container-fluid">
         <div class="row">
-            <nav class="col-12 pt-3 pr-0 pl-5">
+            <nav class="col-2 pt-3 pr-0 pl-5 ">
                 <a class="navbar-brand" href="#">
                   <img src="https://i.pinimg.com/564x/52/9f/0d/529f0dc9fab9777e09c0c42a9259d288.jpg" width="100" height="100" alt="">
                 </a>
               </nav>
-            <div class="col pr-0 pl-0">
-                <ul class="nav justify-content-end">
+            <div class="col-10 pr-0 pl-0">
+                <ul class="nav justify-content-end pt-5">
                     <li class="nav-item" >
                       <a class="nav-link active" href="#" style="color:rgba(165,79,40,255);">Registrarse</a>
                     </li>
