--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                       <a class="nav-link" href="#">inicio <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                      <a class="nav-link" href="#">registrarse<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index2.html">registrarse<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
                       <a class="nav-link" href="#">Artistas<span class="sr-only">(current)</span></a>
@@ -66,8 +66,8 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://picsum.photos/seed/1/2000/500" class="d-block w-100" alt="...">
-              </div>
+                <a href="arrito.html/" target="_blank"><img src="https://picsum.photos/seed/1/2000/500" class="d-block w-100" alt="..."></a>
+              </div> 
               <div class="carousel-item">
                 <img src="https://picsum.photos/seed/2/2000/500" class="d-block w-100" alt="...">
               </div>
@@ -135,8 +135,8 @@
                       <h2>Contacto</h2>
                       <div class="contact-info">
                           <p><i class="fa fa-map-marker"></i>Santiago, Chile</p>
-                          <p><i class="fa fa-envelope"></i>email@musicPro.com</p>
-                          <p><i class="fa fa-phone"></i>+569-456-7890</p>
+                          <p><i class="fa fa-envelope"></i>email@GrupoZero.com</p>
+                          <p><i class="fa fa-phone"></i>+569-403-61386</p>
                       </div>
                   </div>
               </div>
@@ -160,9 +160,9 @@
                   <div class="footer-widget">
                       <h2>Informacion</h2>
                       <ul>
-                          <li><a href="#">Sobre nosotros</a></li>
-                          <li><a href="#">Politica de Privacidad</a></li>
-                          <li><a href="#">Terminos y condiciones</a></li>
+                          <li><a href="">Sobre nosotros</a></li>
+                          <li><a href="">Politica de Privacidad</a></li>
+                          <li><a href="">Terminos y condiciones</a></li>
                       </ul>
                   </div>
               </div>
@@ -171,9 +171,9 @@
                   <div class="footer-widget">
                       <h2>Informacion Compra</h2>
                       <ul>
-                          <li><a href="#">Politica de Pago</a></li>
-                          <li><a href="#">Politica de Compra</a></li>
-                          <li><a href="#">Politica de Reembolso</a></li>
+                          <li><a href="">Politica de Pago</a></li>
+                          <li><a href="">Politica de Compra</a></li>
+                          <li><a href="">Politica de Reembolso</a></li>
                       </ul>
                   </div>
               </div>
@@ -183,15 +183,15 @@
               <div class="col-md-6">
                   <div class="payment-method">
                       <h2>Aceptamos:</h2>
-                      <img src="/static/core/img/payment-method.png" alt="Payment Method">
+                      <img src="" alt="Payment Method">
                   </div>
               </div>
               <div class="col-md-6">
                   <div class="payment-security">
                       <h2>Securidad con:</h2>
-                      <img src="/static/core/img/godaddy.svg" alt="Payment Security">
-                      <img src="/static/core/img/norton.svg" alt="Payment Security">
-                      <img src="/static/core/img/ssl.svg" alt="Payment Security">
+                      <img src="" alt="Payment Security">
+                      <img src="" alt="Payment Security">
+                      <img src="" alt="Payment Security">
                   </div>
               </div>
           </div>
